fixed the overlaping of the cards on top of eachother

--- a/Frontend/frontend/src/css/ActivitiesPage.css
+++ b/Frontend/frontend/src/css/ActivitiesPage.css
@@ -2,6 +2,7 @@
 
 .container {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     justify-content: space-between;
     min-height: 100vh; /* This will take the full viewport height */
